# leptos-mcp-server

./: .gitignore  Cargo.toml  README.md
claude-code-plugin/: README.md
claude-code-plugin/.claude-plugin/: marketplace.json
claude-code-plugin/plugin/: .mcp.json
claude-code-plugin/plugin/.claude-plugin/: plugin.json
docs/: actions.md  components.md  error-handling.md  forms.md  getting-started.md  resources.md  routing.md  server-functions.md  signals.md  suspense.md  views.md
src/: docs.rs  main.rs  protocol.rs  tools.rs
