[package]
name = "leptos-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP Server for Leptos framework documentation and tools"
authors = ["kneiht"]

[workspace]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
